--- a/products.html
+++ b/products.html
@@ -34,7 +34,7 @@
     <h2 class="title">All List</h2>
     <div class="row">
         <div class="col-4">
-            <img src="images/half_dentures-730x360-1.jpg" alt="">
+            <a href="product-details.html"><img src="images/half_dentures-730x360-1.jpg" alt=""></a>
             <div class="rating">
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="col-4">
-            <img src="images/s06-6764p01wl-2.jpg" alt="">
+            <a href="product-details.html"><img src="images/s06-6764p01wl-2.jpg" alt=""></a>
             <div class="rating">
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
@@ -54,7 +54,8 @@
             </div>
         </div>
         <div class="col-4">
-            <img src="images/nr9wzwt0-900-3.jpg" alt="">
+            <a href="product-details.html"><img src="images/nr9wzwt0-900-3.jpg" alt=""></a>
+            
             <div class="rating">
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
@@ -64,7 +65,7 @@
             </div>
         </div>
         <div class="col-4">
-            <img src="images/nr9wzwt0-900-3.jpg" alt="">
+            <a href="product-details.html"><img src="images/nr9wzwt0-900-3.jpg" alt=""></a>
             <div class="rating">
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
